--- a/source/_posts/博客之始.md
+++ b/source/_posts/博客之始.md
@@ -2,7 +2,14 @@
 title: 博客之始
 date: 2018-02-16 00:00:00
 tags:
+  - 情感
 categories:
+  - 日记
+  - 个人
 ---
 
-以前总是看别人的博客，现在是时候到自己写了！！！
+以前总是看别人写的博客，用OneNote做的笔记，当面试的时候被问到：你有写博客吗？我的回答是NO！  那时候以为写博客离自己很遥远，觉得自己的水平低写不出什么东西来，但是现在仔细想想，不正是因为自己的水平低才更要写博客吗！
+
+通过写博客来做笔记并且加入自己的思考，摆脱以前一贯的只记忆不思考的习惯，一次又一次地修改完善，才能更好的提高自己的能力。
+
+在这特殊的一天，踏出新的一步，祝2018年大家越来越好！
