加入机器学习的基本知识

--- a/source/_drafts/机器学习之基本知识.md
+++ b/source/_drafts/机器学习之基本知识.md
@@ -3,3 +3,13 @@ title: 机器学习之基本知识
 tags:
 categories:
 ---
+
+基础知识
+<!-- more -->
+
+- 错误率：分类错误的样本数占样本总数的比例称为“错误率”
+- 精度：
+- 误差：把学习器的事迹预测输出与样本的真实输出之间的差异称为“误差”；学习器在训练集上的误差称为“训练误差”或“经验误差” ；在新鲜样本上的误差称为“泛化误差”；即我们希望得到泛化误差最小的学习器
+
+- 过拟合：指把训练样本自身的一些特点当做了所有潜在样本都会具有的一般性质
+- 欠拟合：指对训练样本的一般性质尚未学好
