修改了内容

--- a/source/_posts/20181104日记.md
+++ b/source/_posts/20181104日记.md
@@ -10,7 +10,7 @@ date: 2018-11-04 23:26:54
 
 # 2018-11-04
 
-今天是周日了，然后昨天没有写到日记，坚持比想象要困难好多呀。
+今天是周日了，然后前天和昨天没有写到日记，坚持比想象要困难好多呀。
 
 然后单例模式的问题依然还没解决，spring cloud的消息总线还没开始，貌似需要消息队列来配合，然后明天开始学习消息队列，然后继续完成spring cloud。
 
