删除了部分文章，调整了内容的目录结构

--- a/source/_posts/日记/学习日记/20181101学习日记.md
+++ b/source/_posts/日记/学习日记/20181101学习日记.md
@@ -1,5 +1,5 @@
 ---
-title: 2018-11-01日记
+title: 2018-11-01 学习日记
 tags:
   - 日记
 categories:
@@ -7,8 +7,9 @@ categories:
 date: 2018-11-01 23:30:37
 ---
 
+2018-11-01 学习日记
 
-# 2018-11-01 深圳 晴天
+<!-- more -->
 
 前言：从今天开始！每天都在学习但是缺不知道自己的进度，所以我想每天花5分钟记录下今天的学习以及体会应该会有不一样的体验。
 
