--- a/source/_posts/日记/学习日记/20181104学习日记.md
+++ b/source/_posts/日记/学习日记/20181104学习日记.md
@@ -1,5 +1,5 @@
 ---
-title: 20181104日记
+title: 2018-11-04 学习日记
 tags:
   - 日记
 categories:
@@ -7,8 +7,9 @@ categories:
 date: 2018-11-04 23:26:54
 ---
 
+深圳 周末2018-11-04 学习日记
 
-# 2018-11-04
+<!-- more -->
 
 今天是周日了，然后前天和昨天没有写到日记，坚持比想象要困难好多呀。
 
