--- a/source/_posts/日记/学习日记/20181105学习日记.md
+++ b/source/_posts/日记/学习日记/20181105学习日记.md
@@ -1,5 +1,5 @@
 ---
-title: 20181105日记
+title: 2018-11-05 学习日记
 tags:
   - 日记
 categories:
@@ -7,8 +7,9 @@ categories:
 date: 2018-11-05 23:31:19
 ---
 
+2018-11-05 学习日记
 
-# 2018-11-05
+<!-- more -->
 
 又过了一天了，今晚还以为没劲写这篇日记了，最后还是鼓起劲来写了，要坚持！
 
