--- a/source/_posts/日记/学习日记/20181107学习日记.md
+++ b/source/_posts/日记/学习日记/20181107学习日记.md
@@ -1,5 +1,5 @@
 ---
-title: 20181107日记
+title: 2018-11-07 学习日记
 tags:
   - 日记
 categories:
@@ -7,8 +7,9 @@ categories:
 date: 2018-11-07 23:25:13
 ---
 
+2018-11-07 学习日记
 
-# 2018-11-07
+<!-- more -->
 
 今天写日记才发现前天的日记没有提交到github，然后昨天偷懒了没有写到日记，今天早上也没有学习设计模式-_-
 
