--- a/source/_posts/日记/学习日记/20181121学习日记.md
+++ b/source/_posts/日记/学习日记/20181121学习日记.md
@@ -1,5 +1,5 @@
 ---
-title: 20181121日记
+title: 2018-11-21 学习日记
 tags:
   - 日记
 categories:
@@ -7,8 +7,9 @@ categories:
 date: 2018-11-21 23:18:05
 ---
 
+2018-11-21 学习日记
 
-# 2018-11-21 深圳 晴天
+<!-- more -->
 
 距离上一次写日记隔了10几天，但唯一比较安慰的是早上学习设计模式没有中断过，现在终于学习了一半了。
 
