--- a/source/_posts/日记/博客之始.md
+++ b/source/_posts/日记/博客之始.md
@@ -5,6 +5,7 @@ tags:
   - 日记
 categories:
   - 日记
+comments: false
 ---
 
 以前总是看别人写的博客，用OneNote做的笔记，当面试的时候被问到：你有写博客吗？我的回答是NO！  那时候以为写博客离自己很遥远，觉得自己的水平低写不出什么东西来，但是现在仔细想想，不正是因为自己的水平低才更要写博客吗！
