加入了短链接插件；加入了置顶插件；

--- a/source/_drafts/机器学习之开发环境搭建.md
+++ b/source/_drafts/机器学习之开发环境搭建.md
@@ -1,8 +1,9 @@
 ---
 title: 机器学习之开发环境搭建
-tags:
 categories:
   - 机器学习
+abbrlink: 30c62f48
+tags:
 ---
 
 每一次编程前总少了需要搭建开发环境，而对于使用tensorflow学习机器学习而言，搭建机器学习的开发环境就是搭建python的开发环境，再加上tensorflow的包了。
