新增内容：更换源提示；安装JRE

--- a/source/_posts/有趣/斐讯N1刷机后操作.md
+++ b/source/_posts/有趣/斐讯N1刷机后操作.md
@@ -9,7 +9,7 @@ abbrlink: b9577586
 date: 2019-06-22 15:43:04
 ---
 
-N1刷机成功后，为了方便使用，免不了要执行一些常见的配置操作或软件安装，例：更换国内软件源、安装docker、设置WIFI等。
+N1刷机成功后，为了方便使用，免不了要执行一些常见的配置操作或软件安装，例：更换国内软件源、安装docker、设置WIFI、安装Java环境等。
 
 <!-- more -->
 
@@ -48,6 +48,14 @@ armbian-config
 方法三：重新安装系统。
 
 # 更换国内源
+
+重要的事情说三遍
+
+如果默认源的安装速度不是特别慢的话，无需特意跟换源！！！
+
+如果默认源的安装速度不是特别慢的话，无需特意跟换源！！！
+
+如果默认源的安装速度不是特别慢的话，无需特意跟换源！！！
 
 /etc/apt/sources.list文件记录的是系统所使用的软件源，而默认安装的系统使用的是国外源
 
@@ -91,6 +99,21 @@ curl -fsSL https://get.docker.com | bash -s docker --mirror Aliyun
 通过脚本直接安装docker及其所需的依赖，可以说是非常方便了。
 
 注意：该脚本会直接安装最新的docker脚本
+
+# 安装JRE
+
+有时候需要运行Java程序，因此JRE（Java运行时环境）是必不可少的。
+
+执行如下命令
+
+```
+# 安装java8的jre
+apt-get install openjdk-8-jre
+```
+
+注意点一：如果安装过程中遇到所需依赖无法下载的问题，可能是由apt源造成的。博主之前使用的是科大软件源，结果提示部分依赖缺少无法下载，然后跟换回默认源就可以了。
+
+注意点二：博主一开始是从Oracle官网下载的解压包：server-jre-8u212-linux-x64.tar.gz，并用其配置环境，但是在尝试执行命令的时候却报错：*cannot execute binary file: Exec format error*，这是因为该解压包的文件目标运行系统和本系统（参考：阅读须知）有差异而导致的，需要指定的版本才能在本系统运行。
 
 # 参考
 
